--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,9 +12,9 @@
         android:id="@+id/relativeLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="0dp">
 
         <ImageView
@@ -31,8 +31,7 @@
             android:layout_marginTop="80dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintVertical_bias="1.0">
+            app:layout_constraintStart_toStartOf="parent">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -42,11 +41,10 @@
                 <android.support.constraint.ConstraintLayout
                     android:id="@+id/constrant"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="350dp"
                     android:layout_marginEnd="10dp"
                     android:layout_marginStart="10dp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent">
 
                     <android.support.v7.widget.CardView
@@ -56,7 +54,6 @@
                         android:layout_margin="10dp"
                         app:cardBackgroundColor="#FFFFFF"
                         app:cardCornerRadius="15dp"
-                        app:cardElevation="7dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintDimensionRatio="1:1"
                         app:layout_constraintStart_toStartOf="parent"
@@ -82,7 +79,6 @@
                             android:layout_marginLeft="20dp"
                             android:layout_marginRight="20dp"
                             android:background="@drawable/loginbackground"
-                            android:elevation="5dp"
                             android:orientation="vertical">
 
                             <android.support.design.widget.TextInputLayout
@@ -96,9 +92,9 @@
                                     android:id="@+id/login_email_address"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
+                                    android:layout_marginLeft="10dp"
                                     android:drawableLeft="@drawable/ic_email"
                                     android:drawablePadding="15dp"
-                                    android:layout_marginLeft="10dp"
                                     android:imeOptions="actionNext"
                                     android:inputType="textEmailAddress"
                                     android:maxLines="1"
@@ -117,7 +113,6 @@
                             android:layout_gravity="center"
                             android:layout_marginTop="70dp"
                             android:background="@drawable/loginbackground"
-                            android:elevation="5dp"
                             android:orientation="vertical">
 
                             <android.support.design.widget.TextInputLayout
@@ -137,8 +132,8 @@
                                     android:layout_marginLeft="10dp"
                                     android:layout_marginStart="10dp"
                                     android:drawableLeft="@drawable/password_lock"
-                                    android:drawableStart="@drawable/password_lock"
                                     android:drawablePadding="10dp"
+                                    android:drawableStart="@drawable/password_lock"
                                     android:imeOptions="actionDone"
                                     android:inputType="textPassword"
                                     android:maxLines="1"
@@ -151,6 +146,27 @@
                             </android.support.design.widget.TextInputLayout>
                         </LinearLayout>
                     </android.support.v7.widget.CardView>
+
+                    <Button
+                        android:id="@+id/btn_login"
+                        android:layout_width="250dp"
+                        android:layout_height="45dp"
+                        android:layout_gravity="center"
+                        android:layout_marginBottom="20dp"
+                        android:layout_marginEnd="8dp"
+                        android:layout_marginLeft="8dp"
+                        android:layout_marginRight="8dp"
+                        android:layout_marginStart="8dp"
+                        android:background="@drawable/slide_gradient_colour"
+                        android:text="Login"
+                        android:textAllCaps="false"
+                        android:textColor="#FFFFFF"
+                        android:textSize="14sp"
+                        android:textStyle="bold"
+                        app:fontFamily="@font/ubuntu"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent" />
                 </android.support.constraint.ConstraintLayout>
 
                 <TextView
@@ -160,25 +176,11 @@
                     android:layout_gravity="center"
                     android:layout_marginEnd="8dp"
                     android:layout_marginStart="8dp"
-                    android:layout_marginTop="10dp"
                     android:text="Forgot password?"
                     android:textColor="#4E2796"
                     android:textSize="13sp"
                     app:fontFamily="@font/ubuntu" />
 
-                <Button
-                    android:id="@+id/btn_login"
-                    android:layout_width="250dp"
-                    android:layout_height="45dp"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="40dp"
-                    android:background="@drawable/slide_gradient_colour"
-                    android:text="Login"
-                    android:textAllCaps="false"
-                    android:textColor="#FFFFFF"
-                    android:textSize="14sp"
-                    android:textStyle="bold"
-                    app:fontFamily="@font/ubuntu" />
 
                 <!--<Button-->
                 <!--android:id="@+id/btn_signup"-->
@@ -205,22 +207,22 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        app:fontFamily="@font/ubuntu"
                         android:text="No account?"
                         android:textColor="#9E9E9E"
-                        android:textSize="13sp" />
+                        android:textSize="13sp"
+                        app:fontFamily="@font/ubuntu" />
 
                     <TextView
                         android:id="@+id/sign_up_here"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="5dp"
                         android:layout_marginLeft="5dp"
-                        app:fontFamily="@font/ubuntu"
+                        android:layout_marginStart="5dp"
                         android:text="Sign Up"
                         android:textColor="#4E2796"
                         android:textSize="13sp"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"
+                        app:fontFamily="@font/ubuntu" />
                 </LinearLayout>
             </LinearLayout>
         </ScrollView>
