--- a/app/src/main/res/layout/activity_password_recovery.xml
+++ b/app/src/main/res/layout/activity_password_recovery.xml
@@ -43,7 +43,7 @@
                 <android.support.constraint.ConstraintLayout
                     android:id="@+id/constrant"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="300dp"
                     android:layout_marginEnd="10dp"
                     android:layout_marginStart="10dp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -57,7 +57,6 @@
                         android:layout_margin="10dp"
                         app:cardBackgroundColor="#FFFFFF"
                         app:cardCornerRadius="15dp"
-                        app:cardElevation="7dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintDimensionRatio="1:1"
                         app:layout_constraintStart_toStartOf="parent"
@@ -95,7 +94,6 @@
                             android:layout_marginRight="20dp"
                             android:layout_marginTop="50dp"
                             android:background="@drawable/loginbackground"
-                            android:elevation="5dp"
                             android:orientation="vertical">
 
                             <android.support.design.widget.TextInputLayout
@@ -124,21 +122,27 @@
                             </android.support.design.widget.TextInputLayout>
                         </LinearLayout>
                     </android.support.v7.widget.CardView>
-                </android.support.constraint.ConstraintLayout>
 
-                <Button
-                    android:id="@+id/send_password"
-                    android:layout_width="250dp"
-                    android:layout_height="45dp"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="40dp"
-                    android:background="@drawable/slide_gradient_colour"
-                    android:text="Send"
-                    android:textAllCaps="false"
-                    android:textColor="#FFFFFF"
-                    android:textSize="14sp"
-                    android:textStyle="bold"
-                    app:fontFamily="@font/ubuntu" />
+                    <Button
+                        android:id="@+id/btn_send"
+                        android:layout_width="250dp"
+                        android:layout_height="45dp"
+                        android:layout_gravity="center"
+                        android:layout_marginEnd="8dp"
+                        android:layout_marginLeft="8dp"
+                        android:layout_marginRight="8dp"
+                        android:layout_marginStart="8dp"
+                        android:background="@drawable/slide_gradient_colour"
+                        android:text="Send"
+                        android:textAllCaps="false"
+                        android:textColor="#FFFFFF"
+                        android:textSize="14sp"
+                        android:textStyle="bold"
+                        app:fontFamily="@font/ubuntu"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent" />
+                </android.support.constraint.ConstraintLayout>
 
                 <LinearLayout
                     android:id="@+id/sign_here"
