--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <dimen name="dots_height">15dp</dimen>
     <dimen name="dots_margin_bottom">20dp</dimen>
+
+    <!-- Overriding default nav icon size. -->
+    <dimen name="design_navigation_icon_size" tools:override="true">20dp</dimen>
 </resources>
