--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -91,7 +91,8 @@
                                 <android.support.design.widget.TextInputEditText
                                     android:id="@+id/login_email_address"
                                     android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
+                                    android:layout_height="50dp"
+                                    android:background="@null"
                                     android:layout_marginLeft="10dp"
                                     android:drawableLeft="@drawable/ic_email"
                                     android:drawablePadding="15dp"
@@ -128,7 +129,8 @@
                                 <android.support.design.widget.TextInputEditText
                                     android:id="@+id/login_password"
                                     android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
+                                    android:layout_height="50dp"
+                                    android:background="@null"
                                     android:layout_marginLeft="10dp"
                                     android:layout_marginStart="10dp"
                                     android:drawableLeft="@drawable/password_lock"
@@ -181,7 +183,6 @@
                     android:textSize="13sp"
                     app:fontFamily="@font/ubuntu" />
 
-
                 <!--<Button-->
                 <!--android:id="@+id/btn_signup"-->
                 <!--android:layout_width="250dp"-->
@@ -197,7 +198,6 @@
                 <!--app:fontFamily="@font/ubuntu" />-->
 
                 <LinearLayout
-                    android:id="@+id/sign_here"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="40dp"
