--- a/app/src/main/res/layout/activity_password_recovery.xml
+++ b/app/src/main/res/layout/activity_password_recovery.xml
@@ -106,7 +106,8 @@
                                 <android.support.design.widget.TextInputEditText
                                     android:id="@+id/login_email_address"
                                     android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
+                                    android:layout_height="50dp"
+                                    android:background="@null"
                                     android:drawableLeft="@drawable/ic_email"
                                     android:drawablePadding="15dp"
                                     android:layout_marginLeft="10dp"
@@ -145,7 +146,6 @@
                 </android.support.constraint.ConstraintLayout>
 
                 <LinearLayout
-                    android:id="@+id/sign_here"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="40dp"
