--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -91,7 +91,8 @@
                             <android.support.design.widget.TextInputEditText
                                 android:id="@+id/register_name"
                                 android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
+                                android:layout_height="55dp"
+                                android:background="@null"
                                 android:layout_marginLeft="10dp"
                                 android:drawableLeft="@drawable/ic_person"
                                 android:drawablePadding="10dp"
@@ -122,12 +123,14 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:hint="Email"
-                            android:textColorHint="#9E9E9E">
+                            android:textColorHint="#9E9E9E"
+                            >
 
                             <android.support.design.widget.TextInputEditText
                                 android:id="@+id/register_email"
                                 android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
+                                android:layout_height="55dp"
+                                android:background="@null"
                                 android:layout_marginLeft="10dp"
                                 android:drawableLeft="@drawable/ic_email"
                                 android:drawablePadding="15dp"
@@ -164,7 +167,8 @@
                             <android.support.design.widget.TextInputEditText
                                 android:id="@+id/register_phone_number"
                                 android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
+                                android:layout_height="55dp"
+                                android:background="@null"
                                 android:layout_marginLeft="10dp"
                                 android:drawableLeft="@drawable/ic_phone"
                                 android:drawablePadding="15dp"
@@ -199,12 +203,14 @@
                             android:padding="5dp"
                             android:textColorHint="#9E9E9E"
                             app:passwordToggleEnabled="true"
-                            app:passwordToggleTint="#9E9E9E">
+                            app:passwordToggleTint="#9E9E9E"
+                            android:background="@null">
 
                             <android.support.design.widget.TextInputEditText
                                 android:id="@+id/register_password"
                                 android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
+                                android:layout_height="50dp"
+                                android:background="@null"
                                 android:layout_marginLeft="10dp"
                                 android:layout_marginStart="10dp"
                                 android:drawableLeft="@drawable/password_lock"
@@ -242,12 +248,14 @@
                             android:padding="5dp"
                             android:textColorHint="#9E9E9E"
                             app:passwordToggleEnabled="true"
-                            app:passwordToggleTint="#9E9E9E">
+                            app:passwordToggleTint="#9E9E9E"
+                            android:background="@null">
 
                             <android.support.design.widget.TextInputEditText
                                 android:id="@+id/confirm_password"
                                 android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
+                                android:layout_height="50dp"
+                                android:background="@null"
                                 android:layout_marginLeft="10dp"
                                 android:layout_marginStart="10dp"
                                 android:drawableLeft="@drawable/password_lock"
@@ -269,7 +277,6 @@
             </android.support.v7.widget.CardView>
 
             <LinearLayout
-                android:id="@+id/sign_here"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="40dp"
