--- a/app/src/main/res/layout/fragment_description.xml
+++ b/app/src/main/res/layout/fragment_description.xml
@@ -7,195 +7,216 @@
     android:background="#DBB8F7"
     tools:context=".fragment.FragmentDescription">
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/transfer_dashboard"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="30dp"
-        android:layout_marginStart="30dp"
+        android:layout_height="match_parent"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        app:cardBackgroundColor="#FFFFFF"
-        app:cardCornerRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
-            android:id="@+id/relative_layout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:gravity="center">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-            <ImageView
-                android:layout_width="100dp"
-                android:layout_height="110dp"
+            <android.support.v7.widget.CardView
+                android:id="@+id/transfer_dashboard"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="30dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="30dp"
+                app:cardBackgroundColor="#FFFFFF"
+                app:cardCornerRadius="10dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <LinearLayout
+                    android:id="@+id/relative_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:gravity="center">
+
+                    <ImageView
+                        android:layout_width="100dp"
+                        android:layout_height="110dp"
+                        android:layout_marginTop="20dp"
+                        android:src="@drawable/card_1"/>
+
+                    <TextView
+                        android:id="@+id/amount_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:text="Amount"
+                        android:textColor="#4E2796"
+                        android:textSize="14sp"
+                        app:fontFamily="@font/ubuntu" />
+
+                    <TextView
+                        android:id="@+id/text_amount"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:text="₦12,000 - ₦14,000"
+                        android:textColor="#424242"
+                        android:textSize="18sp"
+                        android:textStyle="bold"
+                        app:fontFamily="@font/ubuntu" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="3dp"
+                        android:orientation="horizontal"
+                        android:gravity="center">
+
+                        <TextView
+                            android:id="@+id/seller_text"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Seller:"
+                            android:textColor="#424242"
+                            android:textSize="12sp"
+                            app:fontFamily="@font/ubuntu" />
+
+                        <TextView
+                            android:id="@+id/seller_name"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="5dp"
+                            android:layout_marginStart="5dp"
+                            android:text="Kraffty Fingers"
+                            android:textColor="#424242"
+                            android:textSize="15sp"
+                            android:textStyle="bold"
+                            app:fontFamily="@font/ubuntu" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="3dp"
+                        android:orientation="horizontal"
+                        android:gravity="center">
+
+                        <TextView
+                            android:id="@+id/location_text"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Location:"
+                            android:textColor="#424242"
+                            android:textSize="12sp"
+                            app:fontFamily="@font/ubuntu" />
+
+                        <TextView
+                            android:id="@+id/location_name"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="5dp"
+                            android:layout_marginStart="5dp"
+                            android:text="Lagos State"
+                            android:textColor="#424242"
+                            android:textSize="15sp"
+                            android:textStyle="bold"
+                            app:fontFamily="@font/ubuntu" />
+                    </LinearLayout>
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_marginTop="15dp"
+                        android:background="#D3D3D3" />
+
+                    <TextView
+                        android:id="@+id/category_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="15dp"
+                        android:text="Categories"
+                        android:textColor="#4E2796"
+                        android:textSize="14sp"
+                        app:fontFamily="@font/ubuntu" />
+
+                    <TextView
+                        android:id="@+id/category_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Clothings"
+                        android:textColor="#424242"
+                        android:textSize="15sp"
+                        android:textStyle="bold"
+                        app:fontFamily="@font/ubuntu" />
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_marginTop="15dp"
+                        android:background="#D3D3D3" />
+
+                    <TextView
+                        android:id="@+id/description_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="15dp"
+                        android:text="Description"
+                        android:textColor="#4E2796"
+                        android:textSize="14sp"
+                        app:fontFamily="@font/ubuntu" />
+
+                    <TextView
+                        android:id="@+id/description_name_1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Dinner/runway gowns for ladies/girls"
+                        android:textColor="#424242"
+                        android:textSize="14sp"
+                        app:fontFamily="@font/ubuntu" />
+
+                    <TextView
+                        android:id="@+id/description_name_2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="30dp"
+                        android:text="Available in various colours and sizes"
+                        android:textColor="#424242"
+                        android:textSize="14sp"
+                        app:fontFamily="@font/ubuntu" />
+                </LinearLayout>
+            </android.support.v7.widget.CardView>
+
+            <Button
+                android:id="@+id/btn_proceed"
+                android:layout_width="250dp"
+                android:layout_height="45dp"
+                android:layout_gravity="center"
                 android:layout_marginTop="20dp"
-                android:src="@drawable/card_1"/>
-
-            <TextView
-                android:id="@+id/amount_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="Amount"
-                android:textColor="#4E2796"
+                android:layout_marginEnd="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginBottom="40dp"
+                android:background="@drawable/slide_gradient_colour"
+                android:elevation="20dp"
+                android:text="Proceed"
+                android:textAllCaps="false"
+                android:textColor="#FFFFFF"
                 android:textSize="14sp"
-                app:fontFamily="@font/ubuntu" />
-
-            <TextView
-                android:id="@+id/text_amount"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:text="₦12,000 - ₦14,000"
-                android:textColor="#424242"
-                android:textSize="18sp"
                 android:textStyle="bold"
-                app:fontFamily="@font/ubuntu" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="3dp"
-                android:orientation="horizontal"
-                android:gravity="center">
-
-                <TextView
-                    android:id="@+id/seller_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Seller:"
-                    android:textColor="#424242"
-                    android:textSize="12sp"
-                    app:fontFamily="@font/ubuntu" />
-
-                <TextView
-                    android:id="@+id/seller_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginStart="5dp"
-                    android:text="Kraffty Fingers"
-                    android:textColor="#424242"
-                    android:textSize="15sp"
-                    android:textStyle="bold"
-                    app:fontFamily="@font/ubuntu" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="3dp"
-                android:orientation="horizontal"
-                android:gravity="center">
-
-                <TextView
-                    android:id="@+id/location_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Location:"
-                    android:textColor="#424242"
-                    android:textSize="12sp"
-                    app:fontFamily="@font/ubuntu" />
-
-                <TextView
-                    android:id="@+id/location_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginStart="5dp"
-                    android:text="Lagos State"
-                    android:textColor="#424242"
-                    android:textSize="15sp"
-                    android:textStyle="bold"
-                    app:fontFamily="@font/ubuntu" />
-            </LinearLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginTop="15dp"
-                android:background="#D3D3D3" />
-
-            <TextView
-                android:id="@+id/category_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
-                android:text="Categories"
-                android:textColor="#4E2796"
-                android:textSize="14sp"
-                app:fontFamily="@font/ubuntu" />
-
-            <TextView
-                android:id="@+id/category_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Clothings"
-                android:textColor="#424242"
-                android:textSize="15sp"
-                android:textStyle="bold"
-                app:fontFamily="@font/ubuntu" />
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginTop="15dp"
-                android:background="#D3D3D3" />
-
-            <TextView
-                android:id="@+id/description_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
-                android:text="Description"
-                android:textColor="#4E2796"
-                android:textSize="14sp"
-                app:fontFamily="@font/ubuntu" />
-
-            <TextView
-                android:id="@+id/description_name_1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Dinner/runway gowns for ladies/girls"
-                android:textColor="#424242"
-                android:textSize="14sp"
-                app:fontFamily="@font/ubuntu" />
-
-            <TextView
-                android:id="@+id/description_name_2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="50dp"
-                android:text="Available in various colours and sizes"
-                android:textColor="#424242"
-                android:textSize="14sp"
-                app:fontFamily="@font/ubuntu" />
+                app:fontFamily="@font/ubuntu"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
         </LinearLayout>
-    </android.support.v7.widget.CardView>
-
-    <Button
-        android:id="@+id/btn_proceed"
-        android:layout_width="250dp"
-        android:layout_height="45dp"
-        android:layout_gravity="center"
-        android:layout_marginBottom="36dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:background="@drawable/slide_gradient_colour"
-        android:elevation="20dp"
-        android:text="Proceed"
-        android:textAllCaps="false"
-        android:textColor="#FFFFFF"
-        android:textSize="14sp"
-        android:textStyle="bold"
-        app:fontFamily="@font/ubuntu"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+    </ScrollView>
 </android.support.constraint.ConstraintLayout>
