--- a/app/src/main/res/layout/fragment_message.xml
+++ b/app/src/main/res/layout/fragment_message.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,124 +7,152 @@
     android:background="#DBB8F7"
     tools:context=".fragment.MessageFragment">
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/transfer_dashboard"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="25dp"
+        android:layout_marginRight="25dp"
         android:layout_marginStart="25dp"
-        android:layout_marginTop="8dp"
-        app:cardBackgroundColor="#FFFFFF"
-        app:cardCornerRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
-            android:id="@+id/relative_layout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:gravity="center">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-            <EditText
-                android:layout_width="300dp"
-                android:layout_height="55dp"
-                android:layout_marginTop="30dp"
-                android:padding="10dp"
-                android:background="@drawable/loginbackground"
-                android:hint="Full Name"
-                android:maxLines="1"
-                android:singleLine="true"
-                android:textColor="#424242"
-                android:textColorHint="#9E9E9E"
-                android:textCursorDrawable="@null"
-                android:textSize="14sp"
-                app:fontFamily="@font/ubuntu"/>
+            <android.support.v7.widget.CardView
+                android:id="@+id/transfer_dashboard"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="60dp"
+                app:cardBackgroundColor="#FFFFFF"
+                app:cardCornerRadius="10dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
-            <EditText
-                android:layout_width="300dp"
-                android:layout_height="55dp"
-                android:layout_marginTop="15dp"
-                android:padding="10dp"
-                android:background="@drawable/loginbackground"
-                android:hint="Email Address"
-                android:maxLines="1"
-                android:singleLine="true"
-                android:textColor="#424242"
-                android:textColorHint="#9E9E9E"
-                android:textCursorDrawable="@null"
-                android:textSize="14sp"
-                app:fontFamily="@font/ubuntu"/>
+                <LinearLayout
+                    android:id="@+id/relative_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:orientation="vertical">
 
-            <EditText
-                android:layout_width="300dp"
-                android:layout_height="55dp"
-                android:layout_marginTop="15dp"
-                android:padding="10dp"
-                android:background="@drawable/loginbackground"
-                android:hint="Message"
-                android:maxLines="3"
-                android:singleLine="false"
-                android:textColor="#424242"
-                android:textColorHint="#9E9E9E"
-                android:textCursorDrawable="@null"
-                android:textSize="14sp"
-                app:fontFamily="@font/ubuntu"/>
+                    <EditText
+                        android:layout_width="300dp"
+                        android:layout_height="55dp"
+                        android:layout_marginEnd="25dp"
+                        android:layout_marginStart="25dp"
+                        android:layout_marginTop="20dp"
+                        android:background="@drawable/loginbackground"
+                        android:hint="Full Name"
+                        android:maxLines="1"
+                        android:padding="10dp"
+                        android:singleLine="true"
+                        android:textColor="#424242"
+                        android:textColorHint="#9E9E9E"
+                        android:textCursorDrawable="@null"
+                        android:textSize="14sp"
+                        app:fontFamily="@font/ubuntu" />
 
-            <EditText
-                android:layout_width="300dp"
-                android:layout_height="55dp"
-                android:layout_marginTop="15dp"
-                android:padding="10dp"
-                android:background="@drawable/loginbackground"
-                android:hint="Quantity"
-                android:maxLines="1"
-                android:singleLine="true"
-                android:textColor="#424242"
-                android:textColorHint="#9E9E9E"
-                android:textCursorDrawable="@null"
-                android:textSize="14sp"
-                app:fontFamily="@font/ubuntu"/>
+                    <EditText
+                        android:layout_width="300dp"
+                        android:layout_height="55dp"
+                        android:layout_marginEnd="25dp"
+                        android:layout_marginStart="25dp"
+                        android:layout_marginTop="15dp"
+                        android:background="@drawable/loginbackground"
+                        android:hint="Email Address"
+                        android:maxLines="1"
+                        android:padding="10dp"
+                        android:singleLine="true"
+                        android:textColor="#424242"
+                        android:textColorHint="#9E9E9E"
+                        android:textCursorDrawable="@null"
+                        android:textSize="14sp"
+                        app:fontFamily="@font/ubuntu" />
 
-            <EditText
-                android:layout_width="300dp"
-                android:layout_height="55dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginBottom="50dp"
-                android:padding="10dp"
-                android:background="@drawable/loginbackground"
-                android:hint="My Offer"
-                android:maxLines="1"
-                android:singleLine="true"
-                android:textColor="#424242"
-                android:textColorHint="#9E9E9E"
-                android:textCursorDrawable="@null"
+                    <EditText
+                        android:layout_width="300dp"
+                        android:layout_height="55dp"
+                        android:layout_marginEnd="25dp"
+                        android:layout_marginStart="25dp"
+                        android:layout_marginTop="15dp"
+                        android:background="@drawable/loginbackground"
+                        android:hint="Message"
+                        android:maxLines="3"
+                        android:padding="10dp"
+                        android:singleLine="false"
+                        android:textColor="#424242"
+                        android:textColorHint="#9E9E9E"
+                        android:textCursorDrawable="@null"
+                        android:textSize="14sp"
+                        app:fontFamily="@font/ubuntu" />
+
+                    <EditText
+                        android:layout_width="300dp"
+                        android:layout_height="55dp"
+                        android:layout_marginEnd="25dp"
+                        android:layout_marginStart="25dp"
+                        android:layout_marginTop="15dp"
+                        android:background="@drawable/loginbackground"
+                        android:hint="Quantity"
+                        android:maxLines="1"
+                        android:padding="10dp"
+                        android:singleLine="true"
+                        android:textColor="#424242"
+                        android:textColorHint="#9E9E9E"
+                        android:textCursorDrawable="@null"
+                        android:textSize="14sp"
+                        app:fontFamily="@font/ubuntu" />
+
+                    <EditText
+                        android:layout_width="300dp"
+                        android:layout_height="55dp"
+                        android:layout_marginBottom="20dp"
+                        android:layout_marginEnd="25dp"
+                        android:layout_marginStart="25dp"
+                        android:layout_marginTop="15dp"
+                        android:background="@drawable/loginbackground"
+                        android:hint="My Offer"
+                        android:maxLines="1"
+                        android:padding="10dp"
+                        android:singleLine="true"
+                        android:textColor="#424242"
+                        android:textColorHint="#9E9E9E"
+                        android:textCursorDrawable="@null"
+                        android:textSize="14sp"
+                        app:fontFamily="@font/ubuntu" />
+                </LinearLayout>
+            </android.support.v7.widget.CardView>
+
+            <Button
+                android:id="@+id/btn_message"
+                android:layout_width="250dp"
+                android:layout_height="44dp"
+                android:layout_gravity="center"
+                android:layout_marginBottom="40dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="40dp"
+                android:background="@drawable/slide_gradient_colour"
+                android:text="Message"
+                android:textAllCaps="false"
+                android:textColor="#FFFFFF"
                 android:textSize="14sp"
-                app:fontFamily="@font/ubuntu"/>
+                android:textStyle="bold"
+                app:fontFamily="@font/ubuntu"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/transfer_dashboard" />
         </LinearLayout>
-    </android.support.v7.widget.CardView>
-
-    <Button
-        android:id="@+id/btn_message"
-        android:layout_width="250dp"
-        android:layout_height="44dp"
-        android:layout_gravity="center"
-        android:layout_marginBottom="55dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:background="@drawable/slide_gradient_colour"
-        android:text="Message"
-        android:textAllCaps="false"
-        android:textColor="#FFFFFF"
-        android:textSize="14sp"
-        android:textStyle="bold"
-        app:fontFamily="@font/ubuntu"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+    </ScrollView>
 </android.support.constraint.ConstraintLayout>
